fix word wrap in notes, remove lr page

--- a/components/Notes/Note/Note.module.css
+++ b/components/Notes/Note/Note.module.css
@@ -1,4 +1,5 @@
 .note {
+  word-wrap: break-word;
   border-radius: 0.5rem;
   margin-top: 1rem;
   color: var(--color-text);
